# utils

./: .editorconfig  .eslintrc.json  README.md  package.json  tsconfig.eslint.json  tsconfig.json  utils.code-workspace
.github/workflows/: lint-js.yml  lint-rs.yml  publish.yml
benchmark/: file.txt  index.js
lib/: index.js
native/: Cargo.toml
native/src/: errors.rs  internal.rs  lib.rs  read_file.rs  write_file.rs
typings/: index.d.ts
