[package]
name = "starlight-utils"
version = "0.0.5"
authors = ["Gryffon Bellish <owenbellish@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "starlight_utils"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"

[profile.release]
lto = "fat"
codegen-units = 1
